Add meshtastic stuff

--- a/content/projects/gemserv/index.gmi
+++ b/content/projects/gemserv/index.gmi
@@ -1,3 +1,8 @@
 # Self-hosting with germserv
 
-TODO
+This capsule is self-hosted on a DigitalOcean instance running Ubuntu 20.04 LTS.
+
+I wrote a few scripts in Ruby to help install gemserv, make certificates, and setup additional virtual hosts.
+
+=> https://github.com/schrockwell/gemserv-admin gemserv-admin setup scripts
+=> https://github.com/schrockwell/gemini.rockwellschrock.com The content for this site
