--- a/content/index.gmi
+++ b/content/index.gmi
@@ -13,6 +13,7 @@
 => projects/morsle 🔊 Morsle
 
 ## Posts
+=> posts/2023-04-29-gemtext-to-html.gmi 2023-04-29 — Converting Gemtext to HTML with Elixir
 => posts/2023-04-17-making-dbg-useful.gmi 2023-04-17 — Making dbg/2 useful in IEx
 
 ## "Completed" Projects
