Improve generate script to have fs watcher

--- a/gemini/index.gmi
+++ b/gemini/index.gmi
@@ -1,6 +1,6 @@
 # Rockwell Schrock
 
-## Around the Web
+## Around the Web!
 
 => https://www.rockwellschrock.com 🏠 Home
 => https://www.ww1x.com 📻 WW1X.radio - Amateur radio stuff
