Add .gmi layout

--- a/content/index.gmi
+++ b/content/index.gmi
@@ -1,10 +1,10 @@
 # Rockwell Schrock
 
-## Around the Web!
+## Around the Web
 
 => https://www.rockwellschrock.com 🏠 Home
-=> https://www.ww1x.com 📻 WW1X.radio - Amateur radio stuff
-=> https://dnc.show 🎙 Does Not Compute - Podcast (on hiatus)
+=> https://ww1x.radio 📻 WW1X.radio
+=> https://dnc.show 🎙 Does Not Compute
 
 ### Socials
 
