--- a/content/posts/index.gmi
+++ b/content/posts/index.gmi
@@ -1,5 +1,9 @@
 # Posts
 
+## 2024
+
+=> /posts/2024-05-03-new-site.gmi 2024-05-03 [Gemini] schrockwell.com - Now simulcast to the Web and Geminispace!
+
 ## 2023
 
 => /posts/2023-04-29-gemtext-to-html.gmi 2023-04-29 [Elixir] gemtext_to_html v0.1.0
