Add LEO orbit. Closes #5.

--- a/content/index.gmi
+++ b/content/index.gmi
@@ -21,3 +21,12 @@
 
 => gemini://gemini.rockwellschrock.com 🏠 Home
 => gemini://station.martinrue.com/schrockwell 🛰 schrockwell on Station
+
+<gemini>
+## LEO Orbit
+
+=> gemini://tilde.team/~khuxkm/leo/ LEO Orbit webring
+=> gemini://tilde.team/~khuxkm/leo/next.cgi?gemini%3A%2F%2Fgmi.schrockwell.com ➡️ Next page
+=> gemini://tilde.team/~khuxkm/leo/prev.cgi?gemini%3A%2F%2Fgmi.schrockwell.com ⬅️ Previous page
+=> gemini://tilde.team/~khuxkm/leo/rand.cgi?gemini%3A%2F%2Fgmi.schrockwell.com 🔀 Random page
+</gemini>
