--- a/content/posts/index.gmi
+++ b/content/posts/index.gmi
@@ -1,8 +1,10 @@
 # Posts
 
+<web>
 ## RSS Feed
 
-=> https://www.schrockwell.com/rss.xml Subscribe (Web)
+=> https://www.schrockwell.com/rss.xml RSS XML feed
+</web>
 
 ## 2024
 
