--- a/content/index.gmi
+++ b/content/index.gmi
@@ -7,7 +7,7 @@
 ## Around the Web
 
 <gemini>
-=> https://www.rockwellschrock.com 🏠 Home
+=> https://www.schrockwell.com 🏠 www.schrockwell.com
 </gemini>
 => https://ww1x.radio 📻 WW1X.radio
 => https://dnc.show 🎙 Does Not Compute
@@ -22,7 +22,7 @@
 ## Around Geminispace
 
 <web>
-=> gemini://gmi.schrockwell.com 🏠 Home
+=> gemini://gmi.schrockwell.com 🏠 gmi.schrockwell.com
 </web>
 => gemini://station.martinrue.com/schrockwell 🛰 schrockwell on Station
 
