--- a/content/projects/index.gmi
+++ b/content/projects/index.gmi
@@ -2,11 +2,21 @@
 
 ### 🗼 Remote Ham Radio
 Get on the air from anywhere! · Since 2010
+
+For over a decade, RHR has made amateur radio more accessible than ever. For operators who can't build their own stations because they are limited by cost, age, or location, RHR brings world-class, contest-winning stations to their fingertips.
+
+As the CTO and sole developer of RHR, I have developed and managed the entire stack – from hardware to software, front-end to back-end, infrastructure to deployments.
+
 => https://www.remotehamradio.com/ Remote Ham Radio
 => images/rhr.png The RHR console
 
 ### 🐐 SOTA Goat
 An iOS app for the Summits On The Air · Since 2010
+
+One aspect of amateur radio I have enjoyed is Summits On The Air (SOTA), a semi-competitive program that awards points to operators who hike up to mountaintops with their radio gear, and to the hams at home who make contacts with them.
+
+SOTA Goat contains an offline copy of the the entire world database of summits, and enables the browsing and posting of activation alerts from SOTAwatch. For hikers, GPS tracking can determine if they are officially in the summit's "activation zone".
+
 => https://ww1x.radio/sotagoat/ SOTA Goat
 => images/sotagoat1.png Recent SOTA spots
 => images/sotagoat2.png Summit details
@@ -14,7 +24,12 @@ An iOS app for the Summits On The Air · Since 2010
 
 ### 💪 Bodyguard
 A simple, flexible authorization library for Elixir · Since 2016
-=> https://github.com/schrockwell/bodyguard Source code
+
+Back when I started with Elixir and Phoenix, I was still heavily influenced by years of prior development in Rails. So, I wrote a Pundit-style authorization library to help ease that transition. It's diverged slightly from that original vision, but it remains a popular addition to many Phoenix applications, with over 2 million downloads and counting.
+
+=> https://github.com/schrockwell/bodyguard Source
+=> https://hex.pm/packages/bodyguard Hex package
+=> https://hexdocs.pm/bodyguard/ Hexdocs
 
 ### 🌐 schrockwell.com
 You are here · Since 2024
@@ -22,13 +37,18 @@ You are here · Since 2024
 
 ### 🎙️ Does Not Compute
 A weekly development podcast · 2020-2022
+
+I joined DNC partway through its run and recorded ~150 weekly episodes with my pal Sean Washington. Show topics revolved around web app development: tools, tech, productivity, small business strategies, and occasional guests.
+
+The show is on indefinite hiatus. We'd like to bring it back when we find the motivation.
+
 => https://dnc.show/ dnc.show
-=> images/dnc1.jpeg DNC album art
-=> images/dnc2.jpeg Recording with Sean Washington at ElixirConf 2019
+=> images/dnc1.jpeg Album art
+=> images/dnc2.jpeg Recording in-person with Sean Washington at ElixirConf 2019
 
 ### ✈️ Flying
 Private pilot · Since 2018
-=> images/plane1.jpeg My 1977 Piper Archer II (PA-28-181)
+=> images/plane1.jpeg 1977 Piper Archer II
 => images/plane2.jpeg 5,500' somewhere over Maine
 
 ### 📻 Amateur Radio
@@ -40,3 +60,14 @@ WW1X · Extra Class license · Since 2010
 => images/radio1.jpeg Gracing the cover of CQ Magazine
 => images/radio2.jpeg Hex beam antenna overlooking Tortola on a DXpedition
 => images/radio3.jpeg Field Day with WW1E
+
+### 🌪️ 🚗 Storm Chasing
+2006-2011
+
+I've gone chasing with Silver Lining Tours a couple times, did some chase-cations of my own, and even spent the summer of 2009 interning with the National Severe Storms Laboratory (NSSL) in Norman, OK.
+
+=> https://www.schrockwell.com/storm-blog/ The Suck Zone (blog)
+=> images/chasing1.jpeg Lightning, 2006
+=> images/chasing2.jpeg Downburst and mammatus, 2006
+=> images/chasing3.jpeg Shelf cloud, 2006
+=> images/chasing4.jpeg Tornado, 2010
