--- a/content/index.gmi
+++ b/content/index.gmi
@@ -8,6 +8,7 @@
 
 ## Latest Posts
 
+=> /posts/2024-05-08-tls.gmi TLS (The Long Slog)
 => /posts/2024-05-04-backup-vortex.gmi The Backup Vortex
 => /posts/2024-05-03-new-site.gmi schrockwell.com - Now simulcast to the Web and Geminispace!
 
