--- a/content/index.gmi
+++ b/content/index.gmi
@@ -8,9 +8,10 @@
 
 ## Latest Posts
 
-=> /posts/2024-05-08-tls.gmi TLS (The Long Slog)
-=> /posts/2024-05-04-backup-vortex.gmi The Backup Vortex
-=> /posts/2024-05-03-new-site.gmi schrockwell.com - Now simulcast to the Web and Geminispace!
+=> /posts/2024-05-10-orbit-v0.3.0.gmi [Gemini] [Elixir] Orbit v0.3.0 released
+=> /posts/2024-05-08-tls.gmi [Dev] TLS (The Long Slog)
+=> /posts/2024-05-04-backup-vortex.gmi [Productivity] The Backup Vortex
+=> /posts/2024-05-03-new-site.gmi [Gemini] schrockwell.com - Now simulcast to the Web and Geminispace!
 
 ## Around the Web
 
