--- a/content/posts/index.gmi
+++ b/content/posts/index.gmi
@@ -2,13 +2,14 @@
 
 ## 2024
 
+=> /posts/2024-05-10-orbit-v0.3.0.gmi 2024-05-10 [Gemini] [Elixir] Orbit v0.3.0 released
 => /posts/2024-05-08-tls.gmi 2024-05-08 [Dev] TLS (The Long Slog)
 => /posts/2024-05-04-backup-vortex.gmi 2024-05-04 [Productivity] The Backup Vortex
 => /posts/2024-05-03-new-site.gmi 2024-05-03 [Gemini] schrockwell.com - Now simulcast to the Web and Geminispace!
 
 ## 2023
 
-=> /posts/2023-04-29-gemtext-to-html.gmi 2023-04-29 [Elixir] gemtext_to_html v0.1.0
+=> /posts/2023-04-29-gemtext-to-html.gmi 2023-04-29 [Gemini] [Elixir] gemtext_to_html v0.1.0
 => /posts/2023-04-17-making-dbg-useful.gmi 2023-04-17 [Elixir] Making dbg/2 useful in IEx
 => /posts/2023-04-01-morsle-anniversary.gmi 2023-04-01 [Web] One year of Morsle
 => /posts/2023-03-06-abusing-elixir-classes.gmi 2023-03-06 [Elixir] Abusing Elixir: Classes
